# NxNandManager

./: README.md
.github/workflows/: build.yml
NxNandManager_Qt6/: CMakeLists.txt  NxFile.cpp  NxNandManager.h  NxPartition.h  NxStorage.cpp  NxStorage.h  main.cpp
NxNandManager_Qt6/gui/: appicon.rc  explorer.cpp  explorer.h  hactoolnet.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mount.cpp  progress.cpp  progress.h  qutils.cpp
NxNandManager_Qt6/lib/fatfs/: ff.cpp
NxNandManager_Qt6/res/: utils.h
NxNandManager_Qt6/virtual_fs/: filenode.h
